progs/tests/func/wrong_params.sy
start :: fn {

    f : fn -> int = fn a: int -> int {}
    f
}

// error: #TypeMismatch(_, _)
// error: #TypeMismatch(Type::Int, Type::Void)
